# jwt

./: db.sqlite3  pyproject.toml
api/: serializers.py  urls.py
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py
jwttoken/: settings.py  urls.py
